# web-server

./: .gitignore  .rules  CLAUDE.md  CMakeLists.txt  README.md  REFACTOR_TO_GAME_LOOP.md  TODO.md  any.hpp  apple_timer.hpp  area_allocator.cpp  area_allocator_enabled_test.cpp  area_allocator_test.cpp  buffer.hpp  buffer_example.cpp  buffer_view.cpp  container_test.cpp  containers.hpp  game_loop_test  http_client.cpp  http_client.hpp  http_client_example_1.cpp  http_client_example_2.cpp  http_server.cpp  http_server.hpp  http_server_example.cpp  linux_timer.hpp  listener.cpp  listener.hpp  log.hpp  make_functions_test.cpp  network_system_test  ping_pong_client.cpp  ping_pong_server.cpp  pollable.hpp  pollable_pool.hpp  pollable_pool_manager.hpp  poller.cpp  poller.hpp  poller_memory.cpp  poller_memory.hpp  (+30 more)
include/websrv/: any.hpp  area_allocator.hpp  buffer.hpp  buffer_helpers.hpp  buffer_manager.hpp  buffer_view.hpp  containers.hpp  executor.hpp  http_client.hpp  http_server.hpp  listener.hpp  listener_manager.hpp  log.hpp  network_system.hpp  pollable.hpp  pollable_pool.hpp  pollable_pool_manager.hpp  poller.hpp  poller_memory.hpp  sequence.hpp  socket.hpp  socket_manager.hpp  steady_clock.hpp  steady_timer.hpp  websocket_client.hpp  websocket_server.hpp
plan/: tasks.json
src/websrv/: area_allocator.cpp  http_client.cpp  http_server.cpp  listener.cpp  listener_manager.cpp  network_system.cpp  pollable.cpp  poller.cpp  poller_memory.cpp  sequence.cpp  socket.cpp  socket_manager.cpp  websocket_client.cpp  websocket_server.cpp
test/: NETWORK_SYSTEM_TEST_README.md  area_allocator_enabled_test.cpp  area_allocator_test.cpp  buffer_test.cpp  container_test.cpp  game_loop_test.cpp  http_client_1_test.cpp  http_client_2_test.cpp  http_server_test.cpp  make_functions_test.cpp  manager_ops_test.cpp  multi_connection_test.cpp  network_system_test.cpp  ping_pong_client_test.cpp  ping_pong_server_test.cpp  sequence_resumable_test.cpp  sequence_test.cpp  simple_area_test.cpp  socket_error_test.cpp  socket_test.cpp  timer_test.cpp  unified_server_test.cpp  websocket_client_stress_test.cpp  websocket_client_test.cpp  websocket_client_test.py  websocket_echo_server.py  websocket_perf_test.cpp  websocket_server_test.cpp  websocket_test.cpp
